fix the https handshaking error and the file not exist error when deleting item