@@ -55,11 +55,15 @@ run {
     jvmArgs += [
         '--module-path', classpath.asPath,
         '--add-modules', 'javafx.controls',
+        '--add-modules', 'javafx.fxml',
         '--add-exports', 'javafx.base/com.sun.javafx.runtime=controlsfx',
         '--add-exports', 'javafx.graphics/com.sun.javafx.css=controlsfx',
         '--add-exports', 'javafx.base/com.sun.javafx.reflect=ALL-UNNAMED',
         '--add-exports', 'javafx.base/com.sun.javafx.beans=ALL-UNNAMED',
-        '--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED'
+        '--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
+        '--add-opens',   'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+        '--add-opens',   'java.base/java.lang=ALL-UNNAMED',
+        '-Djdk.tls.client.protocols=TLSv1.2'
     ]
 }
 
